// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar renders with two breadcrumbs and two actions 1`] = `
<div
  className="root"
>
  <div>
    <div
      className="breadcrumbs flex"
    >
      <span
        className="flex"
        key="0"
        title="test display name"
      >
        <Link
          className="unstyled ellipsis link"
          replace={false}
          to="/some/test/path"
        >
          test display name
        </Link>
      </span>
    </div>
    <div
      className="flex"
    >
      <WithStyles(Tooltip)
        enterDelay={300}
        title="test display name"
      >
        <Link
          className="unstyled backLink"
          replace={false}
          to="/some/test/path"
        >
          <pure(ArrowBackIcon)
            className="backIcon"
          />
        </Link>
      </WithStyles(Tooltip)>
      <span
        className="pageName ellipsis"
        title="test display name2"
      >
        test display name2
      </span>
    </div>
  </div>
  <div
    className="actions"
  >
    <WithStyles(Tooltip)
      enterDelay={300}
      key="0"
      title="test tooltip"
    >
      <div>
        <BusyButton
          busy={false}
          color="secondary"
          disabled={false}
          icon={[Function]}
          id="test id"
          onClick={
            [MockFunction] {
              "calls": Array [
                Array [],
              ],
            }
          }
          title="test title"
        />
      </div>
    </WithStyles(Tooltip)>
    <WithStyles(Tooltip)
      enterDelay={300}
      key="1"
      title="test disabled title2"
    >
      <div>
        <BusyButton
          busy={false}
          color="secondary"
          disabled={true}
          icon={[Function]}
          id="test id2"
          onClick={[MockFunction]}
          title="test title2"
        />
      </div>
    </WithStyles(Tooltip)>
  </div>
</div>
`;

exports[`Toolbar renders without actions and one breadcrumb 1`] = `
<div
  className="root"
>
  <div>
    <div
      className="breadcrumbs flex"
    />
    <div
      className="flex"
    >
      <span
        className="pageName ellipsis"
        title="test display name"
      >
        test display name
      </span>
    </div>
  </div>
  <div
    className="actions"
  />
</div>
`;

exports[`Toolbar renders without actions, one breadcrumb, and a page name 1`] = `
<div
  className="root"
>
  <div>
    <div
      className="breadcrumbs flex"
    >
      <span
        className="flex"
        key="0"
        title="test display name"
      >
        <Link
          className="unstyled ellipsis link"
          replace={false}
          to="/some/test/path"
        >
          test display name
        </Link>
      </span>
    </div>
    <div
      className="flex"
    >
      <WithStyles(Tooltip)
        enterDelay={300}
        title="test display name"
      >
        <Link
          className="unstyled backLink"
          replace={false}
          to="/some/test/path"
        >
          <pure(ArrowBackIcon)
            className="backIcon"
          />
        </Link>
      </WithStyles(Tooltip)>
      <span
        className="pageName ellipsis"
        title="test display name2"
      >
        test display name2
      </span>
    </div>
  </div>
  <div
    className="actions"
  />
</div>
`;

exports[`Toolbar renders without breadcrumbs and one action 1`] = `
<div
  className="root"
>
  <div>
    <div
      className="breadcrumbs flex"
    />
    <div
      className="flex"
    >
      <span
        className="pageName ellipsis"
        title=""
      />
    </div>
  </div>
  <div
    className="actions"
  >
    <WithStyles(Tooltip)
      enterDelay={300}
      key="0"
      title="test tooltip"
    >
      <div>
        <BusyButton
          busy={false}
          color="secondary"
          disabled={false}
          icon={[Function]}
          id="test id"
          onClick={[MockFunction]}
          title="test title"
        />
      </div>
    </WithStyles(Tooltip)>
  </div>
</div>
`;

exports[`Toolbar renders without breadcrumbs and two actions 1`] = `
<div
  className="root"
>
  <div>
    <div
      className="breadcrumbs flex"
    />
    <div
      className="flex"
    >
      <span
        className="pageName ellipsis"
        title=""
      />
    </div>
  </div>
  <div
    className="actions"
  >
    <WithStyles(Tooltip)
      enterDelay={300}
      key="0"
      title="test tooltip"
    >
      <div>
        <BusyButton
          busy={false}
          color="secondary"
          disabled={false}
          icon={[Function]}
          id="test id"
          onClick={[MockFunction]}
          title="test title"
        />
      </div>
    </WithStyles(Tooltip)>
    <WithStyles(Tooltip)
      enterDelay={300}
      key="1"
      title="test disabled title2"
    >
      <div>
        <BusyButton
          busy={false}
          color="secondary"
          disabled={true}
          icon={[Function]}
          id="test id2"
          onClick={[MockFunction]}
          title="test title2"
        />
      </div>
    </WithStyles(Tooltip)>
  </div>
</div>
`;

exports[`Toolbar renders without breadcrumbs or actions 1`] = `
<div
  className="root"
>
  <div>
    <div
      className="breadcrumbs flex"
    />
    <div
      className="flex"
    >
      <span
        className="pageName ellipsis"
        title=""
      />
    </div>
  </div>
  <div
    className="actions"
  />
</div>
`;
